Support akka 2.6.5 & rxmongo 0.20.10