@@ -1,13 +1,13 @@
 lazy val scala212 = "2.12.9"
 lazy val scala213 = "2.13.2"
 lazy val supportedScalaVersions = List(scala212, scala213)
-lazy val akkaVersion = "2.6.1"
-lazy val rxmongoVersion = "0.20.3"
+lazy val akkaVersion = "2.6.5"
+lazy val rxmongoVersion = "0.20.10"
 
 lazy val commonSettings = Seq(
   name := "akka-reactivemongo-plugin",
   organization := "null-vector",
-  version := "1.3.14",
+  version := "1.3.15",
   scalaVersion := scala213,
   crossScalaVersions := supportedScalaVersions,
   scalacOptions := Seq(
@@ -45,7 +45,6 @@ lazy val commonSettings = Seq(
   Test / fork := true,
   Test / javaOptions += "-Xmx4G",
   Test / javaOptions += "-XX:+CMSClassUnloadingEnabled",
-  Test / javaOptions += "-XX:+UseConcMarkSweepGC",
   Test / javaOptions += "-Dfile.encoding=UTF-8",
 )
 
